[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/skaner.png" type="Texture" id=1]
[ext_resource path="res://scripts/skaner.gd" type="Script" id=2]
[ext_resource path="res://sprites/skaner_done.png" type="Texture" id=3]
[ext_resource path="res://sprites/bul_effect1.png" type="Texture" id=4]
[ext_resource path="res://kongtext.ttf" type="DynamicFontData" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.70522, 6.88406 )

[sub_resource type="Animation" id=2]
resource_name = "skaner_waves"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.7, 0.7, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 30, 30 ) ]
}

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="scaner" type="Area2D" groups=[
"scaner",
]]
show_behind_parent = true
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.618717, -3.35876 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="raycasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="raycasts"]
enabled = true
exclude_parent = false
cast_to = Vector2( 50000, 0 )

[node name="RayCast2D2" type="RayCast2D" parent="raycasts"]
enabled = true
exclude_parent = false
cast_to = Vector2( -500000, 0 )

[node name="RayCast2D3" type="RayCast2D" parent="raycasts"]
enabled = true
exclude_parent = false
cast_to = Vector2( 0, -500000 )

[node name="RayCast2D4" type="RayCast2D" parent="raycasts"]
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 50000 )

[node name="RayCast2D5" type="RayCast2D" parent="raycasts"]
enabled = true
exclude_parent = false
cast_to = Vector2( 50000, 50000 )

[node name="RayCast2D6" type="RayCast2D" parent="raycasts"]
enabled = true
exclude_parent = false
cast_to = Vector2( -50000, 50000 )

[node name="RayCast2D7" type="RayCast2D" parent="raycasts"]
enabled = true
exclude_parent = false
cast_to = Vector2( 50000, -50000 )

[node name="RayCast2D8" type="RayCast2D" parent="raycasts"]
enabled = true
exclude_parent = false
cast_to = Vector2( -50000, -50000 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -0.33371, 0 )
texture = ExtResource( 4 )
energy = 0.7
shadow_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/skaner_waves = SubResource( 2 )

[node name="time_scan" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -8.17677
margin_top = 4.35355
margin_right = 163.823
margin_bottom = 20.3536
rect_scale = Vector2( 0.1, 0.2 )
theme = SubResource( 4 )
step = 1.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="time_scan" to="." method="_on_time_scan_timeout"]
